Updated all links in the website

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Fredy</span>Developer & Designer.</h1>
     
-                        <a href="#" class="button">Contact</a>
+                        <a href="mailto:fredgerman30@gmail.com" class="button">Contact</a>
                     </div>
                     </div>
 
                     <div class="mobileHide"> <div class="home__data">
-                        <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Fredy</span><br> Developer & <br> Designer.</h1>
+                        <h1 class="home__title"><br>Hi,<br>I'am <span class="home__title-color">Fredy</span><br> Developer & <br> Designer.</h1>
                         <a href="#" class="button">Contact</a>
                     </div>
                 </div>
@@ -63,9 +63,9 @@
                 </div> -->
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://tz.linkedin.com/in/fredy-german-mgimba-174081146" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/fredy_da_great/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://github.com/fdagreat" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img" >    
@@ -214,9 +214,12 @@
             <!-- <p class="footer__title">Fredy</p> -->
             <p>Contact me through <a href="mailto:fredgerman30@gmail.com">fredgerman30@gmail.com</a> or click on any the social icons below</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.instagram.com/fredy_da_great/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://twitter.com/mrgreat_fredy" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="www.snapchat.com/add/fredy_dagreat " class="footer__icon"><i class='bx bxl-snapchat' ></i></a>
+                <a href="https://github.com/fdagreat" class="footer__icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://tz.linkedin.com/in/fredy-german-mgimba-174081146" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://wa.link/onyobg " class="footer__icon"><i class='bx bxl-whatsapp' ></i></a>
             </div>
             <p>&#169; 2021 copyright all right reserved - Great Graphics - Fredy Mgimba </p>
         </footer>
