fixed snapchat link 👻

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="footer__social">
                 <a href="https://www.instagram.com/fredy_da_great/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/mrgreat_fredy" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-                <a href="www.snapchat.com/add/fredy_dagreat " class="footer__icon"><i class='bx bxl-snapchat' ></i></a>
+                <a href="https://www.snapchat.com/add/fredy_dagreat" class="footer__icon"><i class='bx bxl-snapchat' ></i></a>
                 <a href="https://github.com/fdagreat" class="footer__icon"><i class='bx bxl-github' ></i></a>
                 <a href="https://tz.linkedin.com/in/fredy-german-mgimba-174081146" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://wa.link/onyobg " class="footer__icon"><i class='bx bxl-whatsapp' ></i></a>
