Updated all pics ✅

--- a/index.html
+++ b/index.html
@@ -164,31 +164,31 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="malagarasi"> </a> </br> <center>Malagarasi Website</center> 
+                        <a href="www.google.com"> <img src="assets/img/malagarasi.png" alt="malagarasi"> </a> </br> <center>Malagarasi Website</center> 
                     </div>
                     <div class="work__img">
-                        <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="hometutor"> </a> </br> <center>hometutor Website</center> 
+                        <a href="www.google.com"> <img src="assets/img/hometutor.png" alt="hometutor"> </a> </br> <center>hometutor Website</center> 
 
                         <!-- <img src="assets/img/work2.jpg" alt="hometutor"> -->
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/work3.jpg" alt="ColorShift"> -->
-                        <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="ColorShift Game"> </a> </br> <center>ColorShift Game</center>
+                        <a href="www.google.com"> <img src="assets/img/colorswitch.png" alt="ColorShift Game"> </a> </br> <center>ColorShift Game</center>
 
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work4.jpg" alt="Logo Design">
+                        <img src="assets/img/catering.png" alt="Logo Design">
                         <!-- <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="Logo Design"> </a> Malagarasi Website --> </br> <center>Logo Design</center>
 
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work5.jpg" alt="Poster Desgin"> </br> <center>Poster Desgin</center>
+                        <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </br> <center>Snapchat Filter Desgin</center>
                         <!-- <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="Poster"> </a> Poster Website -->
 
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/work6.jpg" alt="Github"> -->
-                        <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="Github"> </a> </br> <center>View Github</center>
+                        <a href="www.google.com"> <img src="assets/img/github.png" alt="Github"> </a> </br> <center>View Github</center>
 
                     </div>
                 </div>
