Enabled links on works

--- a/index.html
+++ b/index.html
@@ -164,16 +164,16 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <a href="www.google.com"> <img src="assets/img/malagarasi.png" alt="malagarasi"> </a> </br> <center>Malagarasi Website</center> 
+                        <a href="https://www.malagarasi.co.tz"> <img src="assets/img/malagarasi.png" alt="malagarasi"> </a> </br> <center>Malagarasi Website</center> 
                     </div>
                     <div class="work__img">
-                        <a href="www.google.com"> <img src="assets/img/hometutor.png" alt="hometutor"> </a> </br> <center>hometutor Website</center> 
+                        <a href="https://www.hometutor.co.tz"> <img src="assets/img/hometutor.png" alt="hometutor"> </a> </br> <center>hometutor Website</center> 
 
                         <!-- <img src="assets/img/work2.jpg" alt="hometutor"> -->
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/work3.jpg" alt="ColorShift"> -->
-                        <a href="www.google.com"> <img src="assets/img/colorswitch.png" alt="ColorShift Game"> </a> </br> <center>ColorShift Game</center>
+                        <a href="https://vercel.com/fdagreat/color-switchxo"> <img src="assets/img/colorswitch.png" alt="ColorShift Game"> </a> </br> <center>ColorShift Game</center>
 
                     </div>
                     <div class="work__img">
@@ -182,13 +182,13 @@
 
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </br> <center>Snapchat Filter Desgin</center>
-                        <!-- <a href="www.google.com"> <img src="assets/img/work1.jpg" alt="Poster"> </a> Poster Website -->
+                        <!-- <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </br> <center>Snapchat Filter Desgin</center> -->
+                        <a href="https://www.snapchat.com/add/fredy_dagreat"> <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </a> Snapchat Filter Desgins
 
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/work6.jpg" alt="Github"> -->
-                        <a href="www.google.com"> <img src="assets/img/github.png" alt="Github"> </a> </br> <center>View Github</center>
+                        <a href="https://github.com/fdagreat"> <img src="assets/img/github.png" alt="Github"> </a> </br> <center>View Github</center>
 
                     </div>
                 </div>
