Fixed the percentage bug

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
                 <div class="mobileShow"> 
                     <div class="home__data">
-                        <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Fredy</span>Developer & Designer.</h1>
+                        <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Fredy</span>Developer & Designer.</h1>
     
                         <a href="mailto:fredgerman30@gmail.com" class="button">Contact</a>
                     </div>
                     </div>
 
                     <div class="mobileHide"> <div class="home__data">
-                        <h1 class="home__title"><br>Hi,<br>I'am <span class="home__title-color">Fredy</span><br> Developer & <br> Designer.</h1>
+                        <h1 class="home__title"><br>Hi,<br>I'm <span class="home__title-color">Fredy</span><br> Developer & <br> Designer.</h1>
                         <a href="#" class="button">Contact</a>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/work6.jpg" alt="Github"> -->
-                        <a href="https://github.com/fdagreat"> <img src="assets/img/github.png" alt="Github"> </a> </br> <center>View Github</center>
+                        <a href="https://github.com/fdagreat"> <img src="assets/img/github.png" alt="Github"> </a> </br> <center>View My Projects On Github</center>
 
                     </div>
                 </div>
