bug fixes and updated some icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Fredy German Mgimba Portfolio</title>
+        <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -57,7 +58,7 @@
 
 
                 <!-- <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Fredy</span><br> Developer & <br> Designer </h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Fredy</span><br> Developer & <br> Designer </h1>
 
                     <a href="#" class="button">Contact</a>
                 </div> -->
@@ -83,7 +84,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Fredy</h2>
+                        <h2 class="about__subtitle">I'm Fredy</h2>
                         <p class="about__text">I enjoy using code to create, apart from also being an IoT enthusiast using Arduino and Rasberry Pi, a Graphics Designer and creating Logos, Posters, Snapchat, and Instagram filters (Snapchat lenses & Instagram filters), currently am using Python and Javascript for various projects especially Machine Learning and Data Science projects. </p>           
                     </div>                                   
                 </div>
@@ -111,7 +112,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-css3 skills__icon'></i>
+                                <i class='bx bxs-bot skills__icon'></i>
                                 <span class="skills__name">Ai & Data Analysis </span>
                             </div>
                             <div class="skills__bar skills__css">
@@ -123,7 +124,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-javascript skills__icon' ></i>
+                                <i class='bx bxs-paint skills__icon' ></i>
                                 <span class="skills__name">Graphics Designing</span>
                             </div>
                             <div class="skills__bar skills__js">
@@ -137,7 +138,8 @@
                         <!-- //skill data -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-paint skills__icon'></i>
+                                <!-- <i class="iconify" data-icon="bx-bx-tab"> </i> -->
+                                <i class='bx bx-tab skills__icon' ></i>
                                 <span class="skills__name">App Development</span>
                             </div>
                             <div class="skills__bar skills__ux">
@@ -183,7 +185,7 @@
                     </div>
                     <div class="work__img">
                         <!-- <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </br> <center>Snapchat Filter Desgin</center> -->
-                        <a href="https://www.snapchat.com/add/fredy_dagreat"> <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </a> Snapchat Filter Desgins
+                        <a href="https://www.snapchat.com/add/fredy_dagreat"> <img src="assets/img/filter.png" alt="Snapchat Filter Desgin"> </a> </br> <center>Snapchat Filter Desgins </center>
 
                     </div>
                     <div class="work__img">
@@ -192,6 +194,8 @@
 
                     </div>
                 </div>
+            </br>
+        </br>
             </section>
 
             <!--===== CONTACT =====-->
